added some gulp tasks to improve build

--- a/package.json
+++ b/package.json
@@ -13,29 +13,31 @@
         "ejs": "find ./src -name '*.ejs' -type f -exec cp --parents {} ./dist \\;",
         "rimraf:dist": "rimraf ./dist",
         "live:dev": "nodemon --watch src --exec \"npm run build && npm run start\"",
-        "start": "ts-node ./src/index.ts"
+        "start": "ts-node ./dist/index.js"
     },
-    "main": "server",
-    "types": "server",
+    "main": "index",
+    "types": "index",
     "dependencies": {
         "ejs": "^2.6.1",
-        "express": "^4.16.4",
-        "gulp": "^3.9.1",
-        "gulp-typescript": "^5.0.0-alpha.3",
         "minimist": "^1.2.0",
         "mkdirp": "^0.5.1",
         "showdown": "^1.8.7"
     },
     "devDependencies": {
         "@types/node": "^10.12.2",
-        "babel-cli": "^6.26.0",
+        "browser-sync": "^2.26.3",
         "del": "^2.2.2",
+        "express": "^4.16.4",
+        "gulp": "^3.9.1",
+        "gulp-sourcemaps": "^2.6.4",
+        "gulp-typescript": "^5.0.0-alpha.3",
+        "gulp-util": "^3.0.8",
+        "gulp-watch": "^5.0.1",
         "nodemon": "^1.18.5",
         "rimraf": "^2.6.1",
         "rollup": "^0.51.8",
         "rollup-plugin-commonjs": "^8.2.6",
         "rollup-plugin-node-resolve": "^3.0.0",
-        "ts-node": "^7.0.1",
         "typescript": "^3.1.5"
     }
 }
