--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
         "copy": "node tools/copy-files.js",
         "cleanup": "node tools/cleanup-package.js",
         "publish": "npm publish dist",
-        "build": "npm run rimraf:dist && npm run copy && npm run tsc && npm run ejs && npm run cleanup",
+        "build": "npm run rimraf:dist && npm run copy && npm run tsc && npm run cleanup",
         "tsc": "tsc",
-        "ejs": "find ./src -name '*.ejs' -type f -exec cp --parents {} ./dist \\;",
         "rimraf:dist": "rimraf ./dist",
         "live:dev": "nodemon --watch src --exec \"npm run build && npm run start\"",
-        "start": "ts-node ./dist/index.js"
+        "start": "ts-node ./dist/server.js"
     },
     "main": "index",
     "types": "index",
@@ -29,15 +28,24 @@
         "del": "^2.2.2",
         "express": "^4.16.4",
         "gulp": "^3.9.1",
+        "gulp-clean-css": "^3.10.0",
+        "gulp-concat": "^2.6.1",
+        "gulp-htmlclean": "^2.7.22",
+        "gulp-inject": "^4.3.2",
+        "gulp-nodemon": "^2.4.1",
         "gulp-sourcemaps": "^2.6.4",
+        "gulp-tslint": "^8.1.3",
         "gulp-typescript": "^5.0.0-alpha.3",
+        "gulp-uglify": "^3.0.1",
         "gulp-util": "^3.0.8",
         "gulp-watch": "^5.0.1",
+        "gulp-webserver": "^0.9.1",
         "nodemon": "^1.18.5",
         "rimraf": "^2.6.1",
         "rollup": "^0.51.8",
         "rollup-plugin-commonjs": "^8.2.6",
         "rollup-plugin-node-resolve": "^3.0.0",
+        "tslint": "^5.11.0",
         "typescript": "^3.1.5"
     }
 }
